{
    "name": "ControllerInput",
    "maps": [
        {
            "name": "Default",
            "id": "d6eacde5-4d93-4407-9712-6db8a5851ab2",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "28ba5527-ac40-46c8-aad3-895c15740b6b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b8ad3517-6e90-4628-8c94-61a7e3c2b86e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "9ad5cb2e-5bc5-4998-a3f7-596649265589",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "245e97e7-6d34-4bce-9dbb-a19de1e786da",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "fce130b7-90e7-4279-822d-7c595b255d60",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bcaa8330-9d8b-456a-af2c-2c5190dde6c9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d17c0ffc-9ed8-42ca-82e4-aef18f690067",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "01ee5042-870d-4647-aa10-814cfbcd9508",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5dc4c328-1f93-47fd-a8e3-c871cf2baefc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d30cdc81-54e0-4625-a587-c00872ea5787",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "611c1952-6f38-4d7d-8b7a-d26ffc9daf4a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bd37346-f1de-45b8-8c54-ca7b1f4cfb29",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InputActions",
            "id": "e2f79fad-133f-489d-9bbd-8b327565da4f",
            "actions": [
                {
                    "name": "A",
                    "type": "Button",
                    "id": "f63a5dd4-2b92-4d3c-89b2-d0fd670c0d0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "B",
                    "type": "Button",
                    "id": "01b479e1-1cea-408f-af00-2391bb04f2bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "f933cf3e-282b-4234-8a0f-dc7df456718b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "6cdfdbc2-85b7-4047-85bb-4d5641ec1501",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DPadDown",
                    "type": "Button",
                    "id": "fa6552b6-025a-4f93-9f29-b3e900d7f13b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DPadUp",
                    "type": "Button",
                    "id": "27148e5a-9432-4d5f-801a-5779385157cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DPadLeft",
                    "type": "Button",
                    "id": "bfcf5ab3-7eb1-409b-bbd2-2ee292caff19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DPadRight",
                    "type": "Button",
                    "id": "7a9053b7-34cc-4be4-83f5-5aa6b0abb6d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "bc36eea8-78a7-4177-82e9-614ce7f947d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "81dd293f-762d-4d72-b92a-7aea50c059d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1cc0fc71-c9a3-46d8-bdff-11d8e8b38d8d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e04b617-0485-4df8-87e8-6e2e5e4b20c6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c046ffe-ec46-4708-a1f5-dd3ff8755c3b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f40d0c8-a570-4991-a6eb-ec0af043a8bd",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a788f915-15e9-4056-b7a9-0c04cfaf9f13",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ea9ab36-b84e-43d6-96a8-ec3e35c59a60",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a008e0d0-cd85-4a12-8124-67d5390315b0",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "863adc1a-8a0c-467a-8676-8a4e71d11023",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb68c3e8-6891-4ef0-a850-8c2e8ff0bf9f",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a8f743a-8aaf-40e1-9a86-bdc88ac62a3c",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}